--- a/aprendiendo-spring-boot/src/main/resources/application.yml
+++ b/aprendiendo-spring-boot/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 server:
-  port: 8082
+  port: 8080
   servlet:
-    context-path: /aprendiendo
+    context-path: /aprendiendoSpringBoot
 
 proyecto:
   titulo: Aprendiendo Spring Boot
+  tituloService: Servicio Spring Boot
